[gd_scene load_steps=4 format=3 uid="uid://cfw4w7wyo12ha"]

[ext_resource type="Texture2D" uid="uid://dgmjdveas7mim" path="res://assets/surrender.png" id="1_u1d7q"]
[ext_resource type="Script" uid="uid://dm14ugemdaxro" path="res://map/game_over.gd" id="1_v2yhc"]
[ext_resource type="FontFile" uid="uid://cm5q756n5trre" path="res://assets/VT323-Regular.ttf" id="2_hh0ir"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v2yhc")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 2
offset_left = 8.0
offset_top = 13.0
offset_right = 387.0
offset_bottom = 45.0
scale = Vector2(3, 3)
texture = ExtResource("1_u1d7q")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 294.0
offset_top = 50.0
offset_right = 851.0
offset_bottom = 502.0
theme_override_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.647059, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_hh0ir")
theme_override_font_sizes/font_size = 72
text = "Game Over"
horizontal_alignment = 1

[node name="Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hh0ir")
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hh0ir")
theme_override_font_sizes/font_size = 64
text = "Exit"

[node name="MatchLength" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "500


"
horizontal_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/Control"]
layout_mode = 2
offset_left = -421.0
offset_top = -78.0
offset_right = 511.0
offset_bottom = 128.0

[node name="Player1StatsLabel" type="Label" parent="VBoxContainer/Control/HBox"]
layout_mode = 2
text = "\"player_kill_count\": 0,
			\"minion_kill_count\": 0,
			\"total_damage_dealt\": 0,
			\"total_damage_received\": 0,
			\"death_count\": 0,
			\"ability_used_count\": 0,
			\"osu_highest_combo\": 0,
			\"osu_notes_hit_count\": 0,
			\"osu_average_accuracy\": 0.0, 
			\"minion_spawn_count\": 0,
			\"match_length\": 0"

[node name="Player2StatsLabel" type="Label" parent="VBoxContainer/Control/HBox"]
layout_mode = 2
text = "\"player_kill_count\": 0,
			\"minion_kill_count\": 0,
			\"total_damage_dealt\": 0,
			\"total_damage_received\": 0,
			\"death_count\": 0,
			\"ability_used_count\": 0,
			\"osu_highest_combo\": 0,
			\"osu_notes_hit_count\": 0,
			\"osu_average_accuracy\": 0.0, 
			\"minion_spawn_count\": 0,
			\"match_length\": 0"

[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
